--- a/common.css
+++ b/common.css
@@ -4,6 +4,7 @@
 
 * {
   background-color: black;
+  text-decoration: none;
 }
 
 body {
@@ -42,7 +43,7 @@ a {
 }
 
 a:hover {
-  text-decoration: none;
+  color: steelblue;
 }
 
 table {
